<resources>
    <string name="app_name">Random Pick</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_list_menu">Lists</string>
    <string name="title_activity_random" translatable="false">RandomActivity</string>
    <string name="title_activity_new_list">New list</string>
    <string name="confirmation_dialog">Are you sure?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="no_elements">No elements</string>
    <string name="element">element</string>
    <string name="elements">elements</string>
    <string name="color">Color</string>
    <string name="change_color">Change color</string>
    <string name="add_list">Add list</string>
    <string name="description">Description</string>
    <string name="list_name">List name</string>
    <string name="export">Export</string>
    <string name="delete_list">Delete list</string>
    <string name="need_permission">I can\'t export the list without your permission</string>
    <string name="edit_details">Edit details</string>
    <string name="edit_list">Edit list</string>
    <string name="add_name_description">Add a name and a description</string>
    <string name="already_exists">There is already a list with this name</string>
    <string name="new_element">New element</string>
    <string name="add">Add</string>
    <string name="add_some_text">Add some text first</string>
    <string name="added">added</string>
    <string name="element_already_in_list">This element is already in this list</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="remove">Remove</string>
    <string name="clear_list">Clear List</string>
    <string name="merge_list">Merge list</string>
    <string name="selectLists">Select lists</string>
    <string name="export_completed">List exported</string>
    <string name="add_some_elements">Add some elements first</string>
    <string name="export_as_file">Export as list file</string>
    <string name="export_as_text">Export as text file</string>
    <string name="add_elements">Add elements</string>
    <string name="add_form_text_file">Add from text file</string>

</resources>
